src/test/ui/parser/macro-mismatched-delim-paren-brace.stderr
error: unexpected closing delimiter: `}`
  --> $DIR/macro-mismatched-delim-paren-brace.rs:5:1
   |
LL | fn main() {
   |           - this opening brace...
...
LL |     }
   |     - ...matches this closing brace
LL | }
   | ^ unexpected closing delimiter

error: mismatched closing delimiter: `}`
  --> $DIR/macro-mismatched-delim-paren-brace.rs:2:10
   |
LL |     foo! (
   |          ^ unclosed delimiter
LL |         bar, "baz", 1, 2.0
LL |     }
   |     ^ mismatched closing delimiter

error: aborting due to 2 previous errors

