src/test/ui/parser/macro-mismatched-delim-paren-brace.rs
fn main() {
    foo! (
        bar, "baz", 1, 2.0
    } //~ ERROR incorrect close delimiter
} //~ ERROR unexpected close delimiter: `}`
